# MCP-Hackathon

./: API_KEYS_SETUP.md  Client.py  FRONTEND_INTEGRATION.md  README.md  api_server.py  combined_server.py  data_analysis_tools.py  finance_tools.py  main.py  music_tools.py  news_tools.py  pyproject.toml  requirements.txt  start_server.py  test_api.py
